# LunaVoxel

./: .firebaserc  .gitignore  AzuriteConfig  README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  block-builder.sln  bugs:  commands.txt  firebase.json  package-lock.json  package.json  startup.ps1  startup.sh  stop_services.sh  storage.rules  tsconfig.tsbuildinfo
.github/: BRANCH_PROTECTION.md  copilot-instructions.md  ruleset.json
.github/workflows/: deploy-firebase.yml  deploy.yml  test.yml
backend/: Cargo.toml
backend/src/: lib.rs  types.rs
frontend/: FLAT_VOXEL_FRAME_REPORT.md  app.html  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/public/: landing.html
frontend/src/: App.tsx  globals.css  index.css  main.tsx
functions/: .env.local  .eslintrc.js  .gitignore  package-lock.json  package.json
functions/src/: create-project.ts  identity-validation.ts  index.ts  spacetime-client.ts  sync-user.ts  update-atlas.ts
lunavoxel/server/: BlockCompression.cs  GlobalSuppressions.cs  Module.cs  NormalCompression.cs  StdbModule.csproj  Types.cs  VoxelCompression.cs  VoxelDataUtils.cs  VoxelRLE.cs  global.json
lunavoxel/test/: BlockCompression.test.cs  test.csproj  (+7 more)
src/: App.css  App.tsx  blocks.ts  types.ts
wasm/: Cargo.toml
wasm/benches/: find_exterior_faces_bench.rs
wasm/src/: ambient_occlusion.rs  find_exterior_faces.rs  lib.rs  mesh_arrays.rs  texture_coords.rs  voxel_constants.rs
(+453 files in other folders)
