[package]
name = "lunavoxel-wasm"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[[bench]]
name = "find_exterior_faces_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
